# mcp-sample-with-stock-analysis

./: README.md
Agents/: analysis_pdf_agent.py  stock_agent_http.py
MCP_Server/: .env  README.md  mcp_server.py
RUST/new-stock-api/: .sample.env  Cargo.toml  README.md
RUST/new-stock-api/src/: main.rs
